--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="css/style.css" rel="stylesheet"/>
     <link href="webfont-icons/css/fontello.css" rel="stylesheet"/>
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>    <script src="js/app.js"></script>
 </head>
 <body ng-controller="ReservationCtrl">
     <div class="container-fluid restaurant-header">
